acrescentada página de estatística

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 links:
 - name: Projetos
   link: /projetos/
+- name: Estatística
+  link: /estatistica/
 - name: Blog
   link: /blog/
 - name: Privacidade
