--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ paginate: 10
 paginate_path: "/blog/:num/"
 permalink: pretty
 
-gems:
+plugins:
   - "jekyll-feed"
   - "jekyll-seo-tag"
   - "jekyll-paginate"
